...
  return (
    <ParallaxScrollView
      style={styles.content}
      headerBackgroundColor={theme.colors.accounts}
      headerImage={<IconSymbol size={310} color="#808080" name={AppIcons.accounts} style={styles.headerImage} />}
    >
      <ScreenTitle title={'Explore'} />
      <AppText>This app includes example code to help you get started.</AppText>
      <AppCollapsible title="File-based routing">
        <AppText>
          This app has two screens: <AppText variant="defaultSemiBold">app/(tabs)/index.tsx</AppText> and{' '}
          <AppText variant="defaultSemiBold">app/(tabs)/explore.tsx</AppText>
        </AppText>
...
